--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -437,7 +437,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
   }
 
   > ._list {
-    clear: all;
+    clear: both;
     position: relative;
     padding: 0px 40px;
     width: auto;
