--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -239,7 +239,7 @@ body {
         margin-right: 8px;
       }
       > label > span {
-        font-size: 16;
+        font-size: 16px;
         font-weight: 100;
         &._checked       {color: #777}
         &:not(._checked) {color: #ddd}
