--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -89,6 +89,31 @@ $table-stripe-backgroud-occluded: rgba(248,248,248,.1);
       {text-align: right;}
     }
   }
+  > div._fieldTip {
+    @include popup-container();
+    > div {
+      @include popup-content();
+      background-color: rgba(255, 250, 224, 0.9);
+      padding-left: 12px;
+      padding-right: 12px;
+      padding-bottom: 12px;
+      padding-top: 8px;
+      > div {
+        &:first-child {
+          font-size: 28px;
+          margin-bottom: 12px;
+          font-weight: 600;
+          color: #e6e600;
+        }
+        &:not(:first-child) {
+          font-weight: 300;
+          font-size: 18px;
+          margin-top: 4px;
+          color: #666600;
+        }
+      }
+    }
+  }
 }
 
 @mixin transaction-table ($head-font, $body-font, $height, $stCol, $gx0, $gx1, $gx2, $gx3, $gi0, $gi1, $gi2, $gi3, $gi4, $ge0, $ge1, $ge2) {
