--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -22,18 +22,12 @@ body {
 ._helpInline {
   text-align: center;
   > div {
-    padding: 32px;
-    box-shadow: $drop-shadow;
-    display: inline-block;
-    background: #ffffcc;
-    border-radius: 16px;
-    border: 4px solid #cc9900;
     margin-top: 128px;
+    @include tip-popup();
+    display: inline-block;
+    border-radius: 6px;
     > div {
-      text-align: center;
-      font-size: 32px;
-      color: #cc9900;
-      &:not(:last-child) {margin-bottom: 16px}
+      text-align: left;
     }
   }
 }
