Table inputs are now wrapped in form.

--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -291,7 +291,7 @@ $indent:       24px;
       width: 150px;
     }
   }
-  > table {
+  > form > table {
     border-collapse: collapse;
     tr > td {
       padding: 0px;
