--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -539,6 +539,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     ._activityTable > div > table,
     ._budgetHistoryTable > div > table,
     ._netWorthTable {
+      > tfoot > tr:last-child > td {padding-bottom: 16px}
       border-collapse: collapse;
       padding: 0px 4px;
       color: #222;
