--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -149,7 +149,7 @@ table > tbody > tr > td > ._field > div > ._content {
 }
 
 ._sidebar_right {
-  overflow-x: hidden;
+  overflow-x: visible;
   overflow-y: scroll;
   right: 0px;
   z-index: 1;
