--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -2,6 +2,8 @@
 
 body {
   margin: 0px;
+  &::-webkit-scrollbar { width: 0 !important }
+  overflow-y: scroll;
 }
 
 body > div._blockEverything {
@@ -59,6 +61,7 @@ div._systemStatus {
   width: 940px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px + 48px;
   > ._group {
     margin-top: 32px;
     margin-bottom: 64px;
@@ -639,17 +642,18 @@ body > ._preferences_menu_head {
 
 .tabbed {
   @include user-select(none);
-  position: fixed;
-  left: 0px;
-  right: 0px;
-  top:    0px;
-  bottom: 48px;
   > .tabs {
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    top:    0px;
+    bottom: 48px;
     width: 100%;
     height: 48px;
     background: #33b1ff;
     font-size: 16px;
     overflow: hidden;
+    z-index: 9000;
     div {
       float: left;
       overflow: hidden;
@@ -688,12 +692,8 @@ body > ._preferences_menu_head {
     > div._login, > div:not(._nonTab):not(.background) {color: white}
   }
   > .contents {
+    margin-top: 48px;
     > div {
-      > div {
-        height:   calc(100vh - 48px);
-        position: relative;
-        overflow: scroll;
-      }
       > div.background {
         display: none;
       }
