Fix problem where modal clicks were not received because they were attache to the body element and for some reason popups that extend past the bottom do you increase the body height.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -337,7 +337,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
   }
 }
 
-._Navigate {  
+._Navigate {
   div._TransactionHUD, div._BudgetProgressHUD {
     margin-left: 20px;
     width: auto;
@@ -421,14 +421,8 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
         font-weight: 100;
       }
     }
-    > ._container {
-      > div {padding: 20px 20px 100px 20px}
-      > div > ._progressGraph > div {
-        > div:not(:first-child) {
-          margin-right: 40px;
-          margin-left: 40px;
-        }
-      }
+    > ._container > div {
+      padding: 20px 20px 100px 20px;
     }
   }
 
